# comfyui-dependency-scanner

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  README.md  pyproject.toml  test_import.py
.github/workflows/: ci.yml
skills/: SKILL.md
skills/post-commit-audit/: SKILL.md
src/comfyui_dependency_scanner/: __init__.py  cli.py  scanner.py
tests/: test_scanner.py
