[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-dependency-scanner"
version = "0.1.0"
description = "Scans ComfyUI workflow JSONs, identifies required custom node packages, checks installation status, and optionally installs missing ones"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["comfyui", "workflow", "dependency", "scanner", "custom-nodes"]
authors = [{ name = "Justice E. Chase" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "mypy", "ruff"]

[project.scripts]
comfyui-scan = "comfyui_dependency_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/justice8096/comfyui-dependency-scanner"
Repository = "https://github.com/justice8096/comfyui-dependency-scanner"
Issues = "https://github.com/justice8096/comfyui-dependency-scanner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/comfyui_dependency_scanner"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
